Site atualizado com nova equipe e núcleo. Ainda pendente novas fotos e o novo núcleo a ser inserido

--- a/templates/content/pt-br/project/ex-situ.html
+++ b/templates/content/pt-br/project/ex-situ.html
@@ -1,8 +1,8 @@
-<h3>Núcleo <i>Ex-situ</i></h3>
+<h3>Núcleo Conservação <i>Ex-situ</i></h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <p>
     <div class="banner-m"><img src="{{static_url}}/images/projetos/ex-situ/ex situ.jpg"/></div>
-  O Núcleo <i>Ex Situ</i> é dedicado às plantas ameaçadas da flora brasileira e atua a partir de duas linhas de ação conexas: o aprimoramento e a ampliação das coleções ex situ de espécies ameaçadas e a integração das ações ex situ aos esforços de conservação integrada. Na primeira linha, o foco é em fortalecer as coleções e as instituições que as mantêm. A segunda linha de ação visa a otimização do uso dos recursos e das coleções ex situ para a conservação in situ. O objetivo fundamental do projeto é evitar e reverter os processos de extinção da flora, através da conservação de germoplasma em coleções de plantas cultivadas, bancos de sementes, criopreservação e cultura em vitro, e da reintrodução das espécies em seus ambientes naturais.
+  O Núcleo Conservação <i>Ex Situ</i> é dedicado às plantas ameaçadas da flora brasileira e atua a partir de duas linhas de ação conexas: o aprimoramento e a ampliação das coleções ex situ de espécies ameaçadas e a integração das ações ex situ aos esforços de conservação integrada. Na primeira linha, o foco é em fortalecer as coleções e as instituições que as mantêm. A segunda linha de ação visa a otimização do uso dos recursos e das coleções ex situ para a conservação in situ. O objetivo fundamental do projeto é evitar e reverter os processos de extinção da flora, através da conservação de germoplasma em coleções de plantas cultivadas, bancos de sementes, criopreservação e cultura em vitro, e da reintrodução das espécies em seus ambientes naturais.
   </p>
 
 </div>
@@ -51,68 +51,26 @@
   <br/>
   <h3>Equipe</h3>
   <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
+
+    <div class="item">
+      <img src="{{static_url}}/images/equipe/Daniel.jpg"/>
+      <p align="justify"><strong>Daniel Maurenza</strong>
+      é biólogo, mestre em Ecologia pelo Instituto Nacional de Pesquisas da Amazônia - INPA (2007). Sua experiência concentra-se na área de botânica e ecologia, com ênfase em conservação e em ecofisiologia, estresse fisiológico, germinação e estabelecimento de plântulas. No CNCFlora divide a sua função de analista entre os Núcleos Planejamento de Ações e Conservação Ex Situ, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é responsável por organizar e planejar as expedições à campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!
+      <br />
+        <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
+        <strong>Email:</strong> dmaurenza@cncflora.net
+      </p>
+    </div>
+
     <div class="item">
       <img src="{{static_url}}/images/equipe/Maria.jpg"/>
-      <p><strong>Maria Lúcia Moreira Nova da Costa</strong> É Doutora pela Escola Nacional de Botânica
-        Tropical, possui graduação em Engenharia Florestal pela Universidade de
-        Brasília. Tem experiência na área de conservação e fortalecimento de jardins
-        botânicos. No Instituto de Pesquisas Jardim Botânico do Rio de Janeiro ocupa
-        o cargo de Tecnologista Senior III e coordena o projeto 'Conservação Ex Situ'.<br/>
+      <p align="justify"><strong>Maria Lúcia Moreira Nova da Costa</strong> 
+        é engenheira florestal, doutora em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2014). É servidora na função de Tecnologista Senior III do Instituto de Pesquisa Jardim Botânico do Rio de Janeiro. Sua experiência e interesses profissionais estão relacionados a conservação, ao fortalecimento de jardins botânicos e a espécies ameaçadas. No CNCFlora desempenha a função de coordenadora substituta e  coordenadora do Núcleo Conservação Ex Situ, onde participa dos processos de elaboração de estratégias de conservação para a flora ameaçada de extinção, de organização de livros,  redação de artigos científicos e  documentos técnicos. Maria Lúcia adora viajar, reunir amigos, dançar, fazer artesanato, programas ao ar livre e um monte de outras coisas!
+        <br/>
+        <strong><a href="http://lattes.cnpq.br/0490128192133616" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> lucianova@gmail.com<br/>
       </p>
       </div>
-      <div class="item">
-        <img src="{{static_url}}/images/equipe/tamar.jpg"/>
-        <p><strong>Tamar Bajgielman</strong>
-          é Doutora em Antropologia pela University of Kent, UK,
-          Mestre em Etnobotânica pela mesma universidade e graduada em Ciências
-          Biológicas pela Universidade Santa Úrsula.  Tem experiência na área de
-          Antropologia, com ênfase em Antropologia Ambiental, atuando principalmente
-          nos seguintes temas: ecologia política, etnoecologia, conservação e manejo de
-          recursos naturais, agricultura, pesca artesanal, propriedade coletiva e acesso a
-          recursos produtivos.<br/>
-          <strong>Email:</strong>tamar.rio@gmail.com
-        </p>
-        </div>
-        <div class="item">
-          <img src="{{static_url}}/images/equipe/Daniel.jpg"/>
-          <p><strong>Daniel Maurenza</strong>
-            Biologo e mestre em Ecologia pelo Instituto Nacional de Pesquisas da
-            Amazônia. No CNCFlora faz parte da equipe planejamento de ações para a conservação de
-            espécies ameaçadas de extinção, tendo como atribuição a análise de dados da flora, produção
-            científica e coleta de dados de campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!<br/>
-            <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
-            <strong>Email:</strong> dmaurenza@cncflora.net
-          </p>
-        </div>
-        <div class="item">
-          <img src="{{static_url}}/images/equipe/Rodrigo.jpeg"/>
-          <p><strong>Rodrigo Amaro da Fonseca e Silva</strong>Integrante da equipe do projeto “Lista Vermelha" do
-            atua na avaliação de risco de espécies e composição de documentos técnico-científicos. Participa
-            também de atividades do projeto “Conservação ex situ”. Mestre em Ciência Ambiental (2012) e graduado
-            em Ciências Biológicas (2009) pela Universidade Federal Fluminense - UFF, tem experiências em
-            temáticas interdisciplinares, como gestão ambiental, conservação de espécies ameaçadas, planejamento
-            socioambiental, recuperação de áreas degradadas, educação ambiental, botânica e ecologia.</br>
-            <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4238333Z3" target="_blank">Currículo lattes</a></strong><br/>
-            <strong>Email:</strong> rodrigo@cncflora.net
-            </p>
-          </div>
-          <div class="item">
-            <img src="{{static_url}}/images/equipe/Eduardo.jpeg"/>
-            <p> <strong>Eduardo Dalcin</strong> Doutor em Informática na Biodiversidade pela University of Southampton,
-              (2005), graduado em Ciências Biológicas pela Universidade Gama Filho (1989). Sua experiência e
-              interesses profissionais estão relacionados com: gestão de informação em biodiversidade, governança de
-              dados em biodiversidade, bancos de dados taxonômicos; e qualidade, análise e visualização de dados
-              sobre biodiversidade. Atualmente ocupa o cargo de coordenador do Núcleo de Computação Científica e
-              Geoprocessamento do Instituto de Pesquisas Jardim Botânico do Rio de Janeiro. Membro do comitê
-              técnico-científico do Sistema de Informação sobre a Biodiversidade Brasileira (SiBBr) do MCTI; e do
-              Grupo Técnico da Flora do Mundo Online, meta da GSPC para 2020. No CNCFlora atua como
-              coordenador substituto e faz parte da equipe dos projetos “Planejamento de ações para a conservação de
-              espécies ameaçadas de extinção” e "Projeto Desenvolvimento de sistemas e análises espaciais”.<br/><br/>
-              <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4786576P3" target="_blank">Currículo lattes</a></strong><br/>
-              <strong>Email:</strong> edalcin@jbrj.org</p>
-            </div>
-
   </div>
 </div>
 
