--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -223,98 +223,54 @@
   <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
 
     <div class="item">
-      <img src="{{static_url}}/images/equipe/tainan.jpeg"/>
-      <p><strong>Tainan Messina</strong> coordenadora do Núcleo Lista Vermelha:  No CNCFlora coordena o projeto “Lista
-      Vermelha”. Tem experiência nas áreas de biologia da conservação, conservação de espécies ameaçadas
-      da flora e na elaboração de documentos técnico-científicos e protocolos para conservação da natureza.
-      Também é Mestranda da Escola Nacional de Botânica Tropical – ENBT/JBRJ, graduada em Ciências
-      Biológicas (Licenciatura + Bacharelado) pela Pontifícia Universidade Católica de Campinas – PUC (2005).<br/>
-      <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4576965Y6" target="_blank">Currículo lattes</a></strong><br/>
-      <strong>Email:</strong> tainan@cncflora.net</p>
-    </div>
+    <img src=""/>
+      <p align="justify"><strong>Caio Baez Gomes</strong>
+       é biólogo, formado pela Pontifícia Universidade Católica do Rio de Janeiro - PUC/Rio (2015). Sua experiência concentra-se na área de botânica, com ênfase em inventários florísticos e fitossociológicos da flora de campos de altitude e de florestas altomontanas do estado do Rio de Janeiro. No CNCFlora divide a sua função de analista entre os Núcleos Lista Vermelha e Inventário Florístico em Áreas Prioritárias, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é responsável por organizar e planejar as expedições à campo e pela coleta e determinação do material botânico. Caio adora fazer trilhas, subir montanhas, andar de bicicleta e mergulhar!<br/>
+        <strong><a href="http://lattes.cnpq.br/9726906288362684" target="_blank">Currículo lattes</a></strong><br />
+        <strong>Email:</strong> caiobg@cncflora.net<br/>
+        </p>
+    </div>  
 
     <div class="item">
-      <img src="{{static_url}}/images/equipe/Duda.jpg"/>
-      <p><strong>Eduardo Fernandez</strong>
-      Bacharel em Ciências Biológicas pela Universidade Santa Úrsula – USU (2012). Tem experiência nas áreas de botânica e ecologia nos principais biomas brasileiros e atua nos temas Biodiversidade de Ecossistemas de Montanhas e História Evolutiva de Vegetações Campestres. Integra a equipe do Núcleo Listas Vermelhas do CNCFlora, sendo responsável pela análise de dados e avaliação de risco de extinção das espécies da flora brasileira. É também responsável pela organização e a execução de expedições científicas para a coleta de material botânico em áreas prioritárias para conservação e pesquisa nas principais áreas com lacunas de informação. Encontra-se envolvido na produção de artigos científicos e notas sobre a distribuição geográfica de espécies raras/ ameaçadas da flora, além de produzir relatórios técnico-científicos, materiais para divulgação e diagnósticos sobre a situação de espécies da flora em risco de extinção.<br /><br />
-      <strong>
-        <a href="http://lattes.cnpq.br/0339764153484153">lattes</a>
-      </strong>
-      <strong>Email:</strong> efernandez@cncflora.net
-    </div>
-
-    <div class="item">
-      <img src="{{static_url}}/images/equipe/Luiz.jpeg"/>
-      <p><strong>Luiz Antonio Ferreira dos Santos Filho</strong>Graduado em Ciências Biológicas pela Universidade Santa
-      Úrsula (2009). Pós-graduado em Meio Ambiente pela COPPE/UFRJ (2012). Mestrando pela Escola
-      Nacional de Botânica Tropical (ENBT/JBRJ). No Centro Nacional de Conservação da Flora (CNCFlora)
-      atua no Núcleo Lista Vermelha, coordenando o fluxo de trabalho da avaliação do risco de extinção da
-      flora, a redação de artigos científicos e de documentos técnicos ou de divulgação científica.<br/>
-      <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4559241J9" target="_blank">Currículo lattes</a></strong><br/>
-      <strong>Email:</strong> luiz@cncflora.net
+      <img src="{{static_url}}/images/equipe/Lucas_moraes.jpeg"/>
+      <p align="justify"><strong>Lucas Moraes</strong>
+       é biólogo (bacharel em Genética), mestrando em Genética pela Universidade Federal do Rio de Janeiro - UFRJ. Sua experiência concentra-se nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens e responsável pelos registros fotográficos durante as oficinas, reuniões e expedições à campo.<br/><br/>
+      <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4407910Y7" target="_blank">Currículo lattes</a></strong><br/>
+      <strong>Email:</strong> lucasmoraes@cncflora.net
       </p>
     </div>
 
     <div class="item">
-      <img src="{{static_url}}/images/equipe/Lucas_moraes.jpeg"/>
-      <p><strong>Lucas Moraes</strong> No CNCFlora, é integrante da equipe do “Núcleo Lista Vermelha”, com atuação principal
-      nas análises de avaliação de risco de extinção. Além disso, possui partipação nas etapas de redação e
-      editoração de documentos e no gerenciamento do banco de imagens. Possui graduação em Ciências
-      Biológicas pela Universidade Federal do Rio de Janeiro, na modalidade Genética (2013). Tem experiência
-      nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens.<br/>
-      <strong>
-        <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4407910Y7" target="_blank">Currículo lattes</a>
-      </strong><br/>
-      <strong>Email:</strong> lucasmoraes@cncflora.net</p>
-    </div>
-
-    <div class="item">
-      <img src="{{static_url}}/images/equipe/Lucas.jpeg"/>
-      <p><strong>Lucas Moulton</strong> No CNCFlora, faz parte da equipe do “Núcleo Lista Vermelha”, participando da análise
-      de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação
-      científica; e responsável por traduções em inglês. Graduado em Ciência Ambiental (Bacharelado) pela
-      Universidade de New England (University of New England), Austrália. Possui experiência com a
-      elaboração, execução, redação e apresentação de estudo da resiliência de macrófitas submersas diante
-      de aumento de nutrientes em sistema lêntico e como auxiliar de campo em estudos de fitossociologia da
-      Mata Nebular da Serra dos Orgãos.<br/>
-      <strong>Email:</strong> lmoulton@cncflora.net</p>
-    </div>
-
-    <div class="item">
       <img src="{{static_url}}/images/equipe/Marta.jpg"/>
-      <p>
-      <Strong>Marta Moraes</Strong>, bióloga, bacharel em Ecologia pela Universidade Federal do Rio de Janeiro - UFRJ (1986). Foi bolsista do Jardim Botânico do Rio de Janeiro (JBRJ) trabalhando no Herbário, participou do Programa Mata Atlântica e do Projeto Campos de Altitude, sob a coordenação de Gustavo Martinelli. Entre 1996 e 2014 coordenou o Orquidário e a coleção viva de Orquídeas do JBRJ. Montou e é responsável pela coleção em meio líquido (RBSpirit) do Herbário RB. No CNCFlora integra a equipe do núcleo Lista Vermelha executando análise e avaliação de risco de extinção das espécies. Participa também do gerenciamento do banco de imagens.
-      <br /><br />
+      <p align="justify">
+      <Strong>Marta Moraes</Strong> é bióloga (bacharel em Ecologia) pela Universidade Federal do Rio de Janeiro - UFRJ (1985). Sua experiência concentra-se na área de botânica, com ênfase em taxonomia de Orchidaceae, na coordenação do orquidário, da coleção viva de orquídeas e da coleção em meio líquido do Herbário RB do Jardim Botânico do Rio de Janeiro. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo e é curadora do banco de imagens. Martinha adora cantar e andar no mato!
+      <br />
       <strong><a href="http://lattes.cnpq.br/7277743500411035" target="_blank">Currículo lattes</a></strong><br/>
       <strong>Email:</strong> marta@cncflora.net
         </p>
     </div>
 
     <div class="item">
+      <img src=""/>
+      <p align="justify">
+      <Strong>Patrícia da Rosa</Strong> é bióloga, mestre em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2015). Sua experiência concentra-se na área de botânica, com ênfase em taxonomia e sistemática de Melastomataceae, em florística de vegetação campestre do Pampa e da Mata Atlântica. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ela ainda é responsável por organizar e planejar as visitas aos herbários, as expedições à campo e pela coleta e determinação do material botânico. Patrícia adora ouvir samba e música popular brasileira, praticar Yoga e natação, andar de bicicleta, viajar e ir à campo!
+      <br />
+      <strong><a href="http://lattes.cnpq.br/2113703294879709" target="_blank">Currículo lattes</a></strong><br/>
+      <strong>Email:</strong> patricia@cncflora.net
+        </p>
+    </div>
+
+    <div class="item">
       <img src="{{static_url}}/images/equipe/Raquel.jpeg"/>
-      <p><strong>Raquel Negrão</strong> No CNCFlora faz parte da equipe do “Núcleo Lista Vermelha”, participando da análise de
-      dados, avaliação de risco de extinção, redação de artigos científicos, de documentos técnicos e de
-      divulgação científica. É Doutora e Mestre pelo Programa de Ecologia e Recursos Naturais da
-      Universidade Federal de São Carlos e graduada em Ciências Biológicas pela mesma universidade.
-      Desenvolveu e participou de projetos nas áreas de Ecologia Vegetal de Populações e Comunidades,
-      Botânica, Ecologia da Paisagem, Ecologia de Estradas e Educação Ambiental, atuando principalmente
-      nos seguintes temas: estrutura e dinâmica de populações, ecologia de comunidades envolvendo
-      levantamento fitossociológicos, distribuição espacial, estudo de ecótones e efeito de transições artificias,
-      educação ambiental e conservação da biodiversidade. Possui experiência de campo em diferentes áreas
-      de Cerrado, Mata Atlântica e Restinga.<br/>
+      <p align="justify"><strong>Raquel Negrão</strong> é bióloga, doutora em Ciências (Ecologia e Recursos Naturais) pela Universidade Federal de São Carlos - UFSCar (2014). Sua experiência concentra-se nas áreas de botânica e ecologia, com ênfase em ecologia de populações e comunidades, em efeito de transições artificiais e em conservação da biodiversidade. No CNCFlora é analista e coordenadora substituta do Núcleo Lista Vermelha, onde participa de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo e é responsável pela avaliação de risco de extinção e por conduzir a análise de dados das espécies novas junto com os botânicos taxonomistas. Raquel é poeta (adora haicais), adora dias quentes e ensolarados, correr, ir à praia e falar da vida, de música, arte e política com os amigos!<br/>
       <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4717594P3" target="_blank">Currículo lattes</a></strong><br/>
       <strong>Email:</strong> raquel@cncflora.net</p>
     </div>
 
     <div class="item">
       <img src="{{static_url}}/images/equipe/Rodrigo.jpeg"/>
-      <p>
-        <strong>Rodrigo Amaro da Fonseca e Silva</strong>Integrante da equipe do projeto “Lista Vermelha" do
-        atua na avaliação de risco de espécies e composição de documentos técnico-científicos. Participa
-        também de atividades do projeto “Conservação ex situ”. Mestre em Ciência Ambiental (2012) e graduado
-        em Ciências Biológicas (2009) pela Universidade Federal Fluminense - UFF, tem experiências em
-        temáticas interdisciplinares, como gestão ambiental, conservação de espécies ameaçadas, planejamento
-        socioambiental, recuperação de áreas degradadas, educação ambiental, botânica e ecologia.<br/>
+      <p align="justify">
+        <strong>Rodrigo Amaro</strong> é biólogo, mestre em Ciência Ambiental pela Universidade Federal Fluminense - UFF (2012). Sua experiência está relacionada a temas interdisciplinares, como gestão ambiental, planejamento socioambiental, educação e recuperação ambiental, conservação de espécies ameaçadas e botânica. No CNCFlora desempenha a função de coordenador do Núcleo Lista Vermelha e participa de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da elaboração de projetos para a conservação da flora ameaçada de extinção, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Rodrigo é ciclista, professor de Yoga e meditação e adora a culinária vegetariana!<br/>
         <strong>
           <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4238333Z3" target="_blank">Currículo lattes</a>
         </strong>
@@ -322,19 +278,6 @@
         <strong>Email:</strong> rodrigo@cncflora.net
       </p>
     </div>
-
-    <div class="item">
-      <img src="{{static_url}}/images/equipe/Susana.jpg"/>
-      <p>
-      <Strong>Susana Dreveck</Strong> é bióloga formada pela Universidade Regional de Blumenau (2008), com experiência em inventários florísticos e florestais do componente arbóreo e arbustivo da Mata Atlântica. Na Universidade Regional de Blumenau, trabalhou entre 2008-2010 como bióloga do Inventário Florístico Florestal de Santa Catarina (IFFSC). No CNCFlora participa de todos os processos envolvidos na avaliação do risco de extinção de espécies arbóreas endêmicas da flora do Rio de Janeiro, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Susana adora praticar esportes ao livre e se aventurar na cozinha.
-      <br /><br />
-      <strong><a href="http://lattes.cnpq.br/5090248618258897" target="_blank">Currículo lattes</a></strong><br/>
-      <!--
-      <strong>Email:</strong> marta@cncflora.net
-      -->
-        </p>
-    </div>
-
   </div>
 </div>
 
