--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -155,9 +155,9 @@
 
   <div class="item">
       <img src="{{static_url}}/images/equipe/Daniel.jpg"/>
-      <p><strong>Daniel Maurenza</strong>
-      é biólogo, mestre em Ecologia pelo Instituto Nacional de Pesquisas da Amazônia. No CNCFlora, participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ainda, é responsável pelo planejamento e organização logística das expedições à campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!
-      <br /><br />
+      <p align="justify"><strong>Daniel Maurenza</strong>
+      é biólogo, mestre em Ecologia pelo Instituto Nacional de Pesquisas da Amazônia - INPA (2007). Sua experiência concentra-se na área de botânica e ecologia, com ênfase em conservação e em ecofisiologia, estresse fisiológico, germinação e estabelecimento de plântulas. No CNCFlora divide a sua função de analista entre os Núcleos Planejamento de Ações e Conservação Ex Situ, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é responsável por organizar e planejar as expedições à campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!
+      <br />
         <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> dmaurenza@cncflora.net
       </p>
@@ -165,18 +165,27 @@
 
   <div class="item">
       <img src="{{static_url}}/images/equipe/Eline.jpg"/>
-      <p><strong>Eline Martins</strong>
-      é bióloga, doutora em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2013) e mestre em Conservação da Natureza pela Universidade Federal Rural do Rio de Janeiro – UFRRJ (2009). Trabalha com conservação de espécies com enfoque no desenvolvimento de estratégias de conservação para espécies ameaçadas de extinção e genética da conservação. No CNCFlora desempenha a função de coordenadora técnico-científica e participa da elaboração dos Planos de Ação Nacional. Eline adora o contato com a natureza, ir à praia, praticar Yoga, andar de bicicleta, viajar e aproveitar a companhia dos afilhados!
+      <p align="justify"><strong>Eline Martins</strong>
+      é bióloga, doutora em Botânica (Conservação da Natureza) pela Escola Nacional de Botânica Tropical - ENBT (2013). Sua experiência e interesses profissionais estão relacionados a conservação de espécies, com enfoque no desenvolvimento de estratégias de conservação para espécies ameaçadas de extinção e em genética da conservação. No CNCFlora desempenha a função de coordenadora técnico-científica e participa de todos os processos envolvidos na elaboração de projetos e de estratégias de conservação para a flora ameaçada de extinção, da organização de eventos e de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Eline adora o contato com a natureza, ir à praia, praticar Yoga, andar de bicicleta, viajar e aproveitar a companhia dos afilhados!
       <br />
         <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4162048A7" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> eline@cncflora.net</p>
   </div>
 
   <div class="item">
-      <img src="{{static_url}}/images/equipe/Juliana.jpg"/>
-      <p><strong>Juliana Amaral</strong>
-      é bióloga, mestre em Botânica pela Escola Nacional de Botânica Tropical - ENBT (2014). No CNCFlora, participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ainda, é responsável pela coleta e determinação do material botânico durante as expedições à campo. Juliana adora montanhas, praticar Yoga, aprender coisas novas e tomar vinho com os amigos!
-        <br/><br />
+      <img src="{{static_url}}/images/equipe/Marcio.jpg"/>
+      <p align="justify"><strong>Marcio Verdi</strong>
+      é biólogo, mestre em Botânica pela Universidade Federal Rio Grande Sul - UFRGS (2013). Sua experiência concentra-se na área de botânica e ecologia, com ênfase em modelagem ecológica e em inventários florísticos e florestais para a avaliação e conservação da biodiversidade. No CNCFlora é analista e coordenador substituto do Núcleo Planejamento de Ações, onde participa de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da organização de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens, responsável pela divulgação nas redes sociais e pela coleta e determinação do material botânico durante as expedições à campo. Verdi adora coletar e fotografar plantas, andar de bicicleta, tomar chimarrão e cervejas artesanais!<Br />
+        <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4251351Y9" target="_blank">Currículo lattes</a></strong><br/>
+        <strong>Email:</strong> verdi@cncflora.net
+      </p>
+  </div>
+
+  <div class="item">
+      <img src=""/>
+      <p align="justify"><strong>Melissa Bocayuva</strong>
+      é bióloga, doutora em Botânica pela Universidade Federal de Viçosa - UFV (2012) com pós-doutorado pela mesma universidade. Sua experiência concentra-se na área de botânica e microbiologia, com ênfase em taxonomia, ecologia e conservação de Orchidaceae, biologia e fisiologia dos microrganismos. No CNCFlora desempenha a função de analista do Núcleo Planejamento de Ações, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo para coletar material botânico, identificar e registrar as ameaças incidentes sobre a flora.
+        <br/>
         <strong>
           <a href="http://lattes.cnpq.br/7258510578751609" target="_blank">Currículo lattes</a>
         </strong>
@@ -184,27 +193,11 @@
         <strong>Email:</strong> juliana@cncflora.net<br/>
       </p>
   </div>
-  <div class="item">
-      <img src="{{static_url}}/images/equipe/Marcio.jpg"/>
-      <p><strong>Marcio Verdi</strong>
-      é biólogo, mestre em Botânica pela Universidade Federal Rio Grande Sul
-      (2013), cujos interesses estão voltados para a avaliação da
-      biodiversidade e modelagem de distribuição de espécies sobre diferentes
-      cenários climáticos, com enfoque para conservação. No CNCFlora participa
-      de todos os processos envolvidos na elaboração de estratégias de
-      conservação para a flora ameaçada de extinção, da redação de artigos
-      científicos e de documentos técnicos ou de divulgação científica. Ainda,
-      é curador do banco de imagens e responsável pela coleta e determinação do material botânico durante as
-      expedições à campo. Verdi adora coletar e fotografar plantas, tomar
-      chimarrão e apreciar cervejas artesanais. <Br /><br />
-        <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4251351Y9" target="_blank">Currículo lattes</a></strong><br/>
-        <strong>Email:</strong> verdi@cncflora.net
-      </p>
-  </div>
+
   <div class="item">
       <img src="{{static_url}}/images/equipe/Nina.jpg"/>
-      <p><strong>Nina Pougy</strong>
-      é bióloga, bacharel em Ecologia pela Universidade Federal do Rio de Janeiro - UFRJ (2013). No CNCFlora coordena o núcleo “Planejamento de ações”. Também é responsável pelo geoprocessamento e análises de dados espaciais e participa na elaboração de estratégias de conservação para a flora ameaçada de extinção, nas expedições de campo e na redação de artigos científicos, projetos e documentos técnicos. Nina adora viajar, ir à praia, praticar Yoga, tomar banho de cachoeira e sair com os amigos.
+      <p align="justify"><strong>Nina Pougy</strong>
+      é bióloga (bacharel em Ecologia), mestranda em Práticas em Desenvolvimento Sustentável pela Universidade Federal Rural do Rio de Janeiro - UFRRJ. Sua experiência e interesses profissionais concentram-se na área de conservação da biodiversidade, com ênfase no desenvolvimento de estratégias para a conservação de plantas, planejamento espacial e geoprocessamento aplicado à biologia da conservação e planejamento participativo para a  gestão socioambiental. No CNCFlora desempenha a função de coordenadora do Núcleo Planejamento de Ações e participa de todos os processos envolvidos na elaboração de projetos e de estratégias de conservação para a flora ameaçada de extinção, da organização de eventos e de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo para coletar material botânico, identificar e registrar as ameaças incidentes sobre a flora e organiza oficinas participativas para definir estratégia de conservação. Nina adora viajar, fazer programas ao ar livre, ir à praia, praticar Yoga, tomar banho de cachoeira e sair com os amigos!
       <br />
         <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4496488J9" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> nina@cncflora.net
