--- a/templates/content/pt-br/project/sistemas.html
+++ b/templates/content/pt-br/project/sistemas.html
@@ -12,61 +12,46 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
   <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
       <div class="item">
         <img src="{{static_url}}/images/equipe/Diogo.jpeg"/>
-        <p><strong>Diogo Silva</strong> Graduando em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de Sá
-          (conclusão prevista para 2014). Possui experiência no desenvolvimento de portais e aplicações para
-          internet e servidores, em análise e modelagem de sistemas e processos, utilizando tecnologias e
-          ferramentas de código livre (opensource). No CNCFlora faz parte da equipe de “Projeto Desenvolvimento
-          de sistemas e análises espaciais”, onde é responsável pela criação e desenvolvimento do portal
-          CNCFlora, desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e
-          infraestrutura de tecnologia.<br/><br/>
+        <p align="justify"><strong>Diogo Silva</strong> 
+          é graduando em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de Sá. Sua experiência está relacionada ao desenvolvimento de portais e aplicações para internet e servidores, a análise e modelagem de sistemas e processos, utilizando tecnologias e ferramentas de código livre (opensource). No CNCFlora desempenha a função de analista do Núcleo Sistemas, onde é responsável pela criação e desenvolvimento do portal CNCFlora, desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e infraestrutura de tecnologia.<br/><br/>
           <strong>Email:</strong> diogo@cncflora.net
         </p>
       </div>
+
+      <div class="item">
+        <img src="{{static_url}}/images/equipe/Eduardo.jpeg"/>
+        <p align="justify"><strong>Eduardo Dalcin</strong> 
+          é biólogo, doutor em Informática na Biodiversidade pela University of Southampton (2005). É membro do comitê técnico-científico do Sistema de Informação sobre a Biodiversidade Brasileira (SiBBr) do MCTI; do Grupo Técnico da Flora do Mundo Online, meta da GSPC para 2020; do “Informal Advisory Committee” do “Clearing-House Mechanism” da CBD; do Comitê Executivo da iniciativa “Biodiversity Standards” (TDWG) e ainda do “GBIF Task Force on Accelerating the Discovery of Bio-collections Data”. Participa do Intergovernmental Science-Policy Platform on Biodiversity and Ecosystem Services (IPBES) como membro o “Task Force on Knowledge and Data”; e representa o JBRJ junto ao PainelBio. Sua experiência e interesses profissionais estão relacionados com: gestão de informação em biodiversidade, governança de dados em biodiversidade, bancos de dados taxonômicos; e qualidade, análise e visualização de dados sobre biodiversidade.<br/>
+          <strong><a href="http://lattes.dalcin.org" target="_blank">Currículo lattes</a></strong><br/>
+          <strong>Email:</strong> edalcin@jbrj.org</p>
+        </p>
+      </div>
+
       <div class="item">
           <img src="{{static_url}}/images/equipe/Fernanda.jpg"/>
-          <p><strong>Fernanda Wimmer</strong>
-          é geógrafa formada pela Pontifícia Universidade Católica do Rio de Janeiro, com especialização em Gestão Ambiental pela COPPE/UFRJ (2011). Trabalha com geoprocessamento e sensoriamento remoto. No CNCFlora desempenha a função de técnica em geoprocessamento. Fernanda adora artes, viajar, nadar e beber com os amigos!
+          <p align="justify"><strong>Fernanda Wimmer</strong>
+          é geógrafa formada pela Pontifícia Universidade Católica do Rio de Janeiro - PUC/Rio (2010), com especialização em Gestão Ambiental pela COPPE/UFRJ (2011). Sua experiência concentra-se na área de sensoriamento remoto, processamento digital de imagem, geoprocessamento e prospecção de novas geotecnologias. No CNCFlora desempenha a função de analista do Núcleo Sistemas, participando da gestão da base de dados espaciais, da organização de dados e metadados espaciais, da aferição de precisão e do georreferenciamento dos registros de ocorrência, da elaboração de mapas e da realização de análises espaciais. Fernanda gosta de artes, viajar e beber com os amigos!
             <br/>
+            <strong><a href="http://lattes.cnpq.br/1372059298324603">Currículo lattes</a></strong><br/>
             <strong>Email:</strong> fernanda@cncflora.net
           </p>
       </div>
+
       <div class="item">
-          <img src="{{static_url}}/images/equipe/Laura.jpg"/>
-          <p><strong>Laura Moraes</strong>
-          Mestranda em Inteligencia Artificial pela COPPE, Laura também é
-          Engenheira Eletrônica e de Computacao pela UFRJ. Já trabalhou em
-          outros centros de pesquisa na área de engenharia de software,
-          desenvolvendo e dando suporte aos sistemas de gerenciamento da
-          colaboração. Possui uma start-up de TI especializada em integração e
-          análise de dados, utilizando técnicas de machine learning e data
-          mining. No CNCFlora participa do Núcleo de Sistema de Informação e
-          SIG, onde contribui para o desenvolvimento e evolução dos sistemas,
-          bancos de dados e tecnologia do Centro. Adora dançar, ler livros, ir
-          à praia e bater papo. <br/><br/>
-          <strong><a href="http://lattes.cnpq.br/3138892444406479" target="_blank">Currículo lattes</a></strong><br/>
-          <strong>Email:</strong> lmoraes@cncflora.net
-        </p>
+          <img src=""/>
+          <p align="justify"><strong>Humberto Margon</strong>
+          é geógrafo, formado pela Pontifícia Universidade Católica do Rio - PUC/Rio (2006), especialista em geoprocessamento e gestão de banco de dados geoespacias. No CNCFlora desempenha a função de analista do Núcleo Sistemas, participando da gestão da base de dados espaciais que subsidia os processos e análises dos demais Núcleos, da organização de dados e metadados espaciais, da aferição de precisão e do georreferenciamento dos registros de ocorrência, da elaboração de mapas e da prospecção de novas geotecnologias. Humberto ama viajar, aprecia uma boa comida e tem um especial interesse em cervejas artesanais!
+            <br/>
+            <strong>Email:</strong> humberto@cncflora.net
+          </p>
       </div>
       <div class="item">
-        <img src="{{static_url}}/images/equipe/Leonardo.jpeg"/>
-        <p><strong>Leonardo Novaes</strong> Graduado em Geografia (Bacharelado) pela Pontifícia Universidade Católica do Rio
-          de Janeiro - PUC (2011). Possui experiência na área de sensoriamento remoto e sistemas de
-          informações geográficas (SIG), atuando principalmente nos seguintes temas: estudos ambientais e
-          geotecnologias. No CNCFlora faz parte da equipe “Projeto Desenvolvimento de sistemas e análises
-          espaciais”, participando na análise de dados, redação de artigos científicos e de documentos técnicos ou
-          de divulgação científica e produção cartográfica.<br/><br/><br/>
-          <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4455856P9" target="_blank">Currículo lattes</a></strong><br/>
-          <strong>Email:</strong> leonardo@cncflora.net
-        </p>
-      </div>
-      <div class="item">
-        <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
-        <p><strong>Ricardo Avancini Fernandes</strong>
-       Mestrando do curso de Engenharia Cartográfica do Instituto Militar de Engenharia (IME), pós-graduando no MBA em Tecnologia da Informação pela Universidade Federal do Rio de Janeiro – UFRJ, graduado em Ciências Biológicas pela mesma universidade. Possui experiência na área de tecnologia da informação e geoprocessamento, atuando principalmente no desenvolvimento e manutenção de banco de dados geográficos e desenvolvimento de sistemas de informação. No CNCFlora participa da equipe do núcleo "Computação cientifica e SIG", participando do desenvolvimento de sistemas, gerenciamento do banco de dados e elaboração de mapas, além de contribuir com a redação de artigos científicos e de documentos técnicos ou de divulgação científica.
-          <br/><br/>
-          <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4210066U4" target="_blank">Currículo lattes</a></strong><br/>
-          <strong>Email:</strong> avancini@cncflora.jbrj.gov.br
-        </p>
+          <img src=""/>
+          <p align="justify"><strong>Ícaro de Carvalho</strong>
+          é cientista da computação, formado pela Universidade Federal Fluminense - UFF (2016). Sua experiência está relacionada ao desenvolvimento web, mobile e em metodologias ágeis. Seu trabalho de conclusão de curso foi em computação gráfica e, atualmente, tem interesse em pesquisar modelos gráficos para visualização de informação/dados que possam atender inúmeras áreas de estudo, não apenas para informática. No CNCFlora desempenha a função de analista do Núcleo Sistemas, onde é responsável pela criação e desenvolvimento do portal CNCFlora; pelo desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e infraestrutura de tecnologia. Ícaro também é jogador de rugby e como todo programador, adora um bom café!
+            <br/>
+            <strong>Email:</strong> icaro@cncflora.net
+          </p>
       </div>
   </div>
 </div>
