--- a/templates/layout.html
+++ b/templates/layout.html
@@ -87,7 +87,7 @@
 									<li><a href="{{base_url}}/pt-br/projetos/lista-vermelha">Lista Vermelha</a></li>
 									<li><a href="{{base_url}}/pt-br/projetos/planejamento-de-acoes">Planejamento de Ações</a></li>
 									<li><a href="{{base_url}}/pt-br/projetos/areas-prioritarias">Planejamento espacial para conservação</a></li>
-									<li><a href="{{base_url}}/pt-br/projetos/ex-situ">Ex-situ</a></li>
+									<li><a href="{{base_url}}/pt-br/projetos/ex-situ">Conservação Ex-situ</a></li>
 									<li><a href="{{base_url}}/pt-br/projetos/sistemas">Sistemas</a></li>
 								</ul>
 
