--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -99,7 +99,7 @@
                   <li><a href="{{base_url}}/pt-br/projetos/lista-vermelha">Lista Vermelha</a></li>
                   <li><a href="{{base_url}}/pt-br/projetos/planejamento-de-acoes">Planejamento de Ações</a></li>
                   <li><a href="{{base_url}}/pt-br/projetos/areas-prioritarias">Planejamento Espacial para Conservação</a></li>
-                  <li><a href="{{base_url}}/pt-br/projetos/ex-situ">Ex-situ</a></li>
+                  <li><a href="{{base_url}}/pt-br/projetos/ex-situ">Conservação Ex-situ</a></li>
                   <li><a href="{{base_url}}/pt-br/projetos/sistemas">Sistemas</a></li>
                 </ul>
 
